# gradient-fisherman

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  railway.json
backend/agents/: __init__.py  ingest_agent.py  query_agent.py  viz_agent.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/agents/: __init__.py  ingest.py  query.py  viz.py
backend/app/routers/: chat.py  upload.py
backend/data/: shopify_demo.csv
backend/tests/: test_api.py  test_ast_validator.py  test_ingest.py  test_ingest_agent.py  test_viz.py  test_viz_agent.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChartRenderer.tsx  ChatWindow.tsx  DataTable.tsx  FileUpload.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChartRenderer.tsx  ChatMessage.tsx  DataSummary.tsx  FileUpload.tsx  ResultTable.tsx  SuggestedQuestions.tsx
frontend/src/lib/: api.ts
